--- a/week_4/homework_4_3_mongoproc/hw4-3/pom.xml
+++ b/week_4/homework_4_3_mongoproc/hw4-3/pom.xml
@@ -16,15 +16,15 @@
         </dependency>
 
         <dependency>
-            <groupId>spark</groupId>
-            <artifactId>spark</artifactId>
-            <version>0.9.9.4-SNAPSHOT</version>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.19</version>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-template-freemarker</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
